tests/ui/internal_command_queue.stderr
error[E0603]: module `command` is private
 --> tests/ui/internal_command_queue.rs:1:13
  |
1 | use moirai::command::queue;
  |             ^^^^^^^  ----- module `queue` is not publicly re-exported
  |             |
  |             private module
  |
note: the module `command` is defined here
 --> src/lib.rs
  |
  | mod command;
  | ^^^^^^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/ui/internal_command_queue.rs:1:28
  |
1 | use moirai::command::queue;
  |                            ^ consider adding a `main` function to `$DIR/tests/ui/internal_command_queue.rs`
